# OpenMaven

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  requirements.txt
apps/api/: .env.example  config.py  dependencies.py  main.py  pyproject.toml
apps/api/data/seed/: yc-raw.json  yc-seed.json
apps/api/detection/: __init__.py  alert_rules.py  detection_engine.py  models.py  targeting_board.py
apps/api/detection/tests/: __init__.py  test_alert_rules.py  test_detection_engine.py  test_targeting_board.py
apps/api/ingestion/: __init__.py  csv_detector.py  csv_ingestor.py  document_ingestor.py  document_parser.py  models.py  url_fetcher.py  xlsx_reader.py
apps/api/kg/: client.py  extract.py  neo4j_pipeline.py  types.py
apps/api/ontology/: __init__.py  registry.py  types.py  yc_schema.py
apps/api/routes/: graph.py  health.py  ingest.py  objects.py  ontology.py  query.py  search.py  sim_query.py  simulation.py
apps/api/simulation/: __init__.py  assets.py  combat_ai.py  consequence_engine.py  detection.py  events.py  faction.py  manager.py  profiles.py  red_ai.py  rules.py  scenario.py  sigint.py
apps/api/store/: base.py  memory.py  neo4j_store.py
apps/api/tests/: conftest.py  test_api.py  test_combat_ai.py  test_consequence_engine.py  test_detection.py  test_ingestion.py  test_kg.py  test_neo4j_store.py  test_objects.py  test_ontology.py  test_red_ai.py  test_sigint.py  test_simulation.py
apps/api/ws/: __init__.py  connection_manager.py
docs/: adversary-assets.md  design.md  plan.md
extraction/: global_stats_engine.py  (+1 more)
(+96 files in other folders)
